po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-13 14:52+0000\n"
+"PO-Revision-Date: 2016-06-14 17:33+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -14671,7 +14671,7 @@ msgstr "Normaal is de eigenaar van een financiële rekening de organisatie die C
 msgid ""
 "(Refer to the Mapping and Geocoding section in the Installation and Basic "
 "Setup Chapter)"
-msgstr "(Verwijs naar de paragraaf \"Mapping and Geocoding\" in de \"Installation and Basic Setup Chapter\")"
+msgstr "(Verwijst naar de paragraaf 'Mapping and Geocoding'  in de 'Installation and Basic Setup Chapter')"
 
 #: templates/CRM/Contact/Form/Contact.tpl
 msgid "Click here to configure the panes."
@@ -16066,7 +16066,7 @@ msgstr "Plattetekstformaat"
 
 #: templates/CRM/Contact/Form/Task/Label.hlp
 msgid "Label Formats"
-msgstr "Label formaten"
+msgstr "Labelformaten"
 
 #: templates/CRM/Contact/Form/Task/Label.hlp
 msgid "Select a label format from the dropdown list."
@@ -16077,7 +16077,7 @@ msgid ""
 "Go to <strong><a href=\"%1\">Administer CiviCRM &raquo; Communications "
 "&raquo; Label Formats</a></strong> to add or edit labels or set the default "
 "label format."
-msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Communicatie &raquo; Label Formaat</a> om formaten van labels toe te voegen of te wijzigen, of het standaard formaat te gebruiken."
+msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Communicatie &raquo; Labelformaten</a> om formaten van labels toe te voegen of te wijzigen, of het standaard formaat te gebruiken."
 
 #: templates/CRM/Contact/Form/Task/Map/Google.tpl
 msgid "Get Directions FROM:"
@@ -16407,7 +16407,7 @@ msgid ""
 "matches for your imported records. Existing dedupe rules may be reviewed, "
 "and new rules created, by visiting Contacts > Find and Merge Duplicate "
 "Contacts."
-msgstr "Als u een overeenkomst optie, behalve \"niet op dubbelen controleren\", selecteert, zal CiviCRM een voorgedefinieerde overeenkomstregel gebruiken om mogelijke overeenkomsten te bepalen van uw geïmporteerde records. Bestaande overeenkomstregels kunnen gereviseerd worden en er kunnen nieuwe regels gemaakt worden bij Contacten > Dubbele contacten zoeken en samenvoegen. "
+msgstr "Als u een overeenkomstoptie, behalve \"Geen controle\", selecteert, zal CiviCRM een voorgedefinieerde overeenkomstregel gebruiken om mogelijke overeenkomsten te bepalen van uw geïmporteerde records. Bestaande overeenkomstregels kunnen gereviseerd worden en er kunnen nieuwe regels gemaakt worden bij Contacten > Dubbele contacten zoeken en samenvoegen. "
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
@@ -16814,7 +16814,7 @@ msgid ""
 " bar. Drag and drop dashlets onto the left or right columns below to add "
 "them to your dashboard. Changes are automatically saved. Click 'Done' to "
 "return to the normal dashboard view."
-msgstr "Beschikbare elementen - dashlets - worden getoond in het grijze vlak.<br />Sleep een dashlet naar de linker- of rechterkolom om het toe te voegen aan uw dashboard.<br />Wijzigingen worden automatisch opgeslagen. Klik 'Klaar' om terug te gaan naar de startpagina."
+msgstr "Beschikbare elementen - dashlets - worden getoond in het grijze vlak. Sleep een dashlet naar de linker- of rechterkolom om het toe te voegen aan uw dashboard. Wijzigingen worden automatisch opgeslagen. Klik op 'Klaar' om terug te gaan naar de startpagina."
 
 #: templates/CRM/Contact/Page/Dashlet.tpl
 msgid "Available Dashlets"
@@ -19427,7 +19427,7 @@ msgid ""
 "You can configure one or more SMS Providers for your CiviCRM installation. "
 "To learn more about the procedure to install SMS extension and Provider, "
 "refer"
-msgstr "U kunt een of meer SMS providers toevoegen. Kijk voor meer informatie over het installeren van een SMS extensie in"
+msgstr "U kunt een of meer SMS-providers toevoegen. Kijk voor meer informatie over het installeren van een SMS-extensie in "
 
 #: templates/CRM/SMS/Page/Provider.tpl
 msgid "Provider Details"
@@ -19664,7 +19664,7 @@ msgstr "Help scherm achteraf"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Limit Group"
-msgstr "Limiet groep"
+msgstr "Beperk groep"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Notify Email"
@@ -25001,7 +25001,7 @@ msgstr "Er is niets om samen toe voegen."
 
 #: CRM/Contact/Page/DedupeMerge.php
 msgid "You do not have permission to force merge duplicate contact records"
-msgstr "U heeft niet het recht om dubbele contact-records samen te voegen."
+msgstr "U heeft niet het recht om dubbele contactrecords samen te voegen."
 
 #: CRM/Contact/Page/DedupeMerge.php
 msgid "Merging Duplicates.."
