--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-13 14:17+0000\n"
+"PO-Revision-Date: 2016-06-14 17:21+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -519,7 +519,7 @@ msgid ""
 "other fields in the profile. If you don't yet have an appropriate Profile "
 "configured, you will need to <a href='%1'>create one first</a>, and then "
 "return to this form to select it."
-msgstr "Het supporter profiel wordt gebruikt om informatie te verzamelen of te bewerken (bijvoorbeeld naam en e-mailadres) van gebruikers terwijl zij een persoonlijke campagnepagina maken. Het profiel kunt u instellen door  \\\"Gebruikers registratie\\\" aan te vinken (onder Profiel instellingen  &raquo; Geavanceerde instellingen). Er dient een veld te zijn voor een e-mailadres. Als u nog geen passend profiel heeft ingesteld, <a href='%1'>maak dan hier een profiel aan</a> en keer dan terug naar dit formulier. "
+msgstr "Het supporter profiel wordt gebruikt om informatie te verzamelen of te bewerken (bijvoorbeeld naam en e-mailadres) van gebruikers terwijl zij een persoonlijke campagnepagina maken. Het profiel kunt u instellen door  'Toestaan gebruikersregistratie' aan te vinken (onder Profiel instellingen  &raquo; Geavanceerde instellingen). Er dient een veld te zijn voor een e-mailadres. Als u nog geen passend profiel heeft ingesteld, <a href='%1'>maak dan hier een profiel aan</a> en keer dan terug naar dit formulier. "
 
 #: templates/CRM/PCP/Form/Contribute.tpl templates/CRM/PCP/Form/Event.tpl
 msgid ""
