--- a/po/nl_NL/financial.po
+++ b/po/nl_NL/financial.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-31 18:35+0000\n"
+"PO-Revision-Date: 2016-06-14 16:07+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -890,7 +890,7 @@ msgstr "Als u de batch afsluit, zal CiviCRM het aantal controleren."
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
 "you will have the opportunity to override the warning if they do not match"
-msgstr "u heeft de mogelijkheid om de waarschuwing te negeren als het aantal niet overeenkomt"
+msgstr "u kunt de waarschuwing negeren als het aantal niet overeenkomt"
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
