--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -13,12 +13,13 @@
 # samuelsov <samuel@koumbit.org>, 2015
 # samuelsov <samuel@koumbit.org>, 2011
 # samuelsov <samuel@koumbit.org>, 2011,2015
+# Stéphane Lussier <stephane@symbiotic.coop>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-16 02:25+0000\n"
+"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -91,7 +92,7 @@ msgstr "GOTV (Suivi des électeurs)"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Petition"
-msgstr "Nouvelle prétition"
+msgstr "Nouvelle pétition"
 
 msgctxt "menu"
 msgid "Sign Petition"
@@ -243,7 +244,7 @@ msgstr "Ajouter des produits à cette page"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Contribution Page"
-msgstr "Nouvelle Page de Contribution"
+msgstr "Nouvelle page de contribution"
 
 msgctxt "menu"
 msgid "Manage Premiums"
