po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-14 16:00+0000\n"
+"PO-Revision-Date: 2016-06-15 14:03+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2588,7 +2588,7 @@ msgid ""
 "You can specify the number of installments, or you can leave the number of "
 "installments blank if you want to make an open-ended commitment. In either "
 "case, you can choose to cancel at any time."
-msgstr "U kunt het aantal termijnen aangeven, of u kunt dit veld leeg laten als u zelf handmatig uw periodieke bijdrage wilt beëindigen. Dit laatste kunt u altijd doen, ook als u eerder een aantal termijnen heeft ingevuld."
+msgstr "U kunt het aantal termijnen aangeven, of u kunt dit veld leeg laten als u handmatig de periodieke bijdrage wilt beëindigen. Dit laatste kunt u altijd doen, ook als u eerder een aantal termijnen heeft ingevuld."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "You will receive an email receipt for each recurring contribution."
@@ -2823,7 +2823,7 @@ msgid ""
 " to cancel at any time. You will receive an email receipt for each recurring"
 " contribution. The receipts will include a link you can use if you decide to"
 " modify or cancel your future contributions."
-msgstr "Uw periodieke bijdrage zal automatisch worden verwerkt voor het door u opgegeven aantal keer. Als u dit veld niet invult, dan loopt de bijdrage door totdat u op enig moment zelf de periodieke bijdrage stopzet. U krijgt voor elke bijdrage een een bevestiging per e-mail. Met deze e-mail kunt u eenvoudig uw bijdrage aanpassen of stopzetten voor toekomstige bijdragen."
+msgstr "Uw periodieke bijdrage zal automatisch het door u opgegeven aantal keer worden verwerkt. Als u dit veld niet invult, dan loopt de bijdrage door totdat u op enig moment zelf de periodieke bijdrage stopzet. U krijgt voor elke bijdrage een een bevestiging per e-mail. Met deze e-mail kunt u eenvoudig uw toekomstige bijdrage aanpassen of stopzetten."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
@@ -4149,7 +4149,7 @@ msgstr "Op dit scherm kunt u de creditcard en de rekeningnaam en adres wijzigen 
 msgid ""
 "Total number of payments to be made. Set this to 0 if this is an open-ended "
 "commitment i.e. no set end date."
-msgstr "Aantal keer van betalen. Als u 0 invult, dan betekent dat het een blijvende betaling is, die u zelf stopzet."
+msgstr "Aantal keer van betalen. Als u 0 invult, dan betekent dat het een blijvende betaling is, u moet deze zelf beëindigen."
 
 #: templates/CRM/Contribute/Form/UpdateSubscription.tpl
 msgid "Number of time units for recurrence of payment."
