--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-16 22:53+0000\n"
+"PO-Revision-Date: 2016-06-15 10:52+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1205,7 +1205,7 @@ msgstr "Prenumerera igen"
 
 msgctxt "menu"
 msgid "Opt-out"
-msgstr "Avsägning"
+msgstr "Avsböjning"
 
 msgctxt "menu"
 msgid "Confirm"
