--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-01 14:05+0000\n"
+"PO-Revision-Date: 2016-06-15 14:13+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1933,7 +1933,7 @@ msgid ""
 "Report'). You can include a logo by adding an &lt;img&gt; tag. You can also "
 "modify the look and feel of the printed report by including a custom CSS "
 "file (instead of print.css)."
-msgstr "De koptekst bevat HTML-code die bovenaan de uitvoer van het document komt te staan wanneer het wordt afgedrukt of opgeslagen in PDF-opmaak. De standaardwaarden zullen in de meeste situaties werken. U wilt mogelijk de feitelijke titel van het rapport invoeren (i.p.v. 'CiviCRM rapport'). U kunt ook een logo opnemen door een &lt;img&gt;-tag toe te voegen. Verder kunt u het uiterlijk van het af te drukken rapport wijzigen door een eigen CSS-bestand te gebruiken (in plaats van print.css)."
+msgstr "De koptekst bevat HTML-code die bovenaan de uitvoer van het document komt te staan wanneer het wordt afgedrukt of gedownload in PDF-opmaak. De standaardwaarden zullen in de meeste situaties voldoen. U wilt mogelijk de feitelijke titel van het rapport invoeren (i.p.v. 'CiviCRM rapport'). U kunt ook een logo opnemen door een &lt;img&gt;-tag toe te voegen. Verder kunt u het uiterlijk van het af te drukken rapport wijzigen door een eigen CSS-bestand te gebruiken (in plaats van print.css)."
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
