po: update po/nl_NL/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/member.po
+++ b/po/nl_NL/member.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-01 14:14+0000\n"
+"PO-Revision-Date: 2016-06-15 14:18+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1200,7 +1200,7 @@ msgid ""
 "If <strong>Status Override</strong> is checked, the selected status will "
 "remain in force (it will NOT be modified by the automated status update "
 "script)."
-msgstr "Als <strong>Handmatige status</strong> aangevinkt is, blijft de geselecteerde status van kracht (Hij zal NIET gewijzigd worden door het script voor het automatisch bijwerken van statussen)."
+msgstr "Als <strong>Handmatige status</strong> aangevinkt is, blijft de geselecteerde status van kracht (de status zal NIET gewijzigd worden door het script voor het automatisch bijwerken van statussen)."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Membership payment amount."
