po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-13 20:01+0000\n"
+"PO-Revision-Date: 2016-06-15 10:54+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -9563,7 +9563,7 @@ msgstr "Auto-svar"
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "Opt-out Message"
-msgstr "Avsägningsmeddelande"
+msgstr "Avböjningsmeddelande"
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "Subscription Confirmation Request"
@@ -13017,7 +13017,7 @@ msgid ""
 "'Unsubscribe via web page' - creates a link for recipients to unsubscribe "
 "from the specific mailing list used to send this message. Alternatively, you"
 " can include the 'Unsubscribe via email' token or one of the Opt-out tokens."
-msgstr "'Avbryta prenumeration via web-sida' - skapar en länk för mottagare av utskick att avsäga sig utskick för den lista som användes för att skicka meddelandet. Alternativt kan du inkludera 'Avbryta prenumeration via e-post'-elementet eller något av avsägnings-elementen."
+msgstr "'Avbryta prenumeration via web-sida' - skapar en länk för mottagare av utskick att avböja utskick för den lista som användes för att skicka meddelandet. Alternativt kan du inkludera 'Avbryta prenumeration via e-post'-elementet eller något av avböjelse-elementen."
 
 #: CRM/Utils/VersionCheck.php
 msgid "This version of CiviCRM requires a security update."
@@ -14411,7 +14411,7 @@ msgstr "Om du använder CiviMail för att skicka utskick till kontakter så ger 
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Opt Out"
-msgstr "Avsägning"
+msgstr "Avböjning"
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid ""
@@ -20659,7 +20659,7 @@ msgstr "Bekräfta avsagd prenumeration"
 msgid ""
 "You have been un-subscribed from the following groups: %1. You can re-"
 "subscribe by mailing %2 or clicking <a href=\"%3\">here</a>."
-msgstr "Du har avsagt prenumerationen från följande grupper: %1. Du kan återuppta prenumerationen genom att skicka epost till %2 eller klicka <a href=\"%3\">här</a>."
+msgstr "Du har avböjt prenumerationen från följande grupper: %1. Du kan återuppta prenumerationen genom att skicka epost till %2 eller klicka <a href=\"%3\">här</a>."
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
@@ -20685,7 +20685,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Opt-out Confirmation"
-msgstr "Bekräfta avsägning"
+msgstr "Bekräftelse på avböjning av utskick"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Your email address has been removed from %1 mailing lists."
