po: update po/en_GB/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/en_GB/provinces.po
+++ b/po/en_GB/provinces.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Andi Chandler <andi@gowling.com>, 2016
 # Graham <graham@mc3.coop>, 2012
 # Graham <graham@mc3.coop>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -10,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-16 09:21+0000\n"
+"Last-Translator: Andi Chandler <andi@gowling.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1881,7 +1882,7 @@ msgstr "Burgas"
 
 msgctxt "province"
 msgid "Dobrich"
-msgstr ""
+msgstr "Dobrich"
 
 msgctxt "province"
 msgid "Gabrovo"
@@ -1893,19 +1894,19 @@ msgstr "Haskovo"
 
 msgctxt "province"
 msgid "Yambol"
-msgstr ""
+msgstr "Yambol"
 
 msgctxt "province"
 msgid "Kardzhali"
-msgstr ""
+msgstr "Kardzhali"
 
 msgctxt "province"
 msgid "Kyustendil"
-msgstr ""
+msgstr "Kyustendil"
 
 msgctxt "province"
 msgid "Lovech"
-msgstr ""
+msgstr "Lovech"
 
 msgctxt "province"
 msgid "Pazardzik"
@@ -1941,7 +1942,7 @@ msgstr "Sliven"
 
 msgctxt "province"
 msgid "Smolyan"
-msgstr ""
+msgstr "Smolyan"
 
 msgctxt "province"
 msgid "Sofia"
@@ -1953,11 +1954,11 @@ msgstr "Stara Zagora"
 
 msgctxt "province"
 msgid "Shumen"
-msgstr ""
+msgstr "Shumen"
 
 msgctxt "province"
 msgid "Targovishte"
-msgstr ""
+msgstr "Targovishte"
 
 msgctxt "province"
 msgid "Varna"
@@ -1973,7 +1974,7 @@ msgstr "Vidin"
 
 msgctxt "province"
 msgid "Vratsa"
-msgstr ""
+msgstr "Vratsa"
 
 msgctxt "province"
 msgid "Al Hadd"
@@ -6033,7 +6034,7 @@ msgstr "Bali"
 
 msgctxt "province"
 msgid "Kepulauan Bangka Belitung"
-msgstr ""
+msgstr "Kepulauan Bangka Belitung"
 
 msgctxt "province"
 msgid "Banten"
@@ -6049,7 +6050,7 @@ msgstr "Gorontalo"
 
 msgctxt "province"
 msgid "Papua Barat"
-msgstr ""
+msgstr "Papua Barat"
 
 msgctxt "province"
 msgid "Jambi"
@@ -6141,7 +6142,7 @@ msgstr "Sumatera Utara"
 
 msgctxt "province"
 msgid "DKI Jakarta"
-msgstr ""
+msgstr "DKI Jakarta"
 
 msgctxt "province"
 msgid "Aceh"
@@ -6149,7 +6150,7 @@ msgstr "Aceh"
 
 msgctxt "province"
 msgid "DI Yogyakarta"
-msgstr ""
+msgstr "DI Yogyakarta"
 
 msgctxt "province"
 msgid "Cork"
@@ -7909,7 +7910,7 @@ msgstr "Jelgava"
 
 msgctxt "province"
 msgid "Jūrmala"
-msgstr ""
+msgstr "Jūrmala"
 
 msgctxt "province"
 msgid "Liepāja"
@@ -7921,7 +7922,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Rīga"
-msgstr ""
+msgstr "Rīga"
 
 msgctxt "province"
 msgid "Ventspils"
@@ -11209,7 +11210,7 @@ msgstr "Tristan da Cunha"
 
 msgctxt "province"
 msgid "Ajdovščina"
-msgstr ""
+msgstr "Ajdovščina"
 
 msgctxt "province"
 msgid "Beltinci"
@@ -11245,7 +11246,7 @@ msgstr "Bovec"
 
 msgctxt "province"
 msgid "Braslovče"
-msgstr ""
+msgstr "Braslovče"
 
 msgctxt "province"
 msgid "Brda"
@@ -11257,7 +11258,7 @@ msgstr "Brezovica"
 
 msgctxt "province"
 msgid "Brežice"
-msgstr ""
+msgstr "Brežice"
 
 msgctxt "province"
 msgid "Cankova"
@@ -11285,15 +11286,15 @@ msgstr "Cerkvenjak"
 
 msgctxt "province"
 msgid "Črenšovci"
-msgstr ""
+msgstr "Črenšovci"
 
 msgctxt "province"
 msgid "Črna na Koroškem"
-msgstr ""
+msgstr "Črna na Koroškem"
 
 msgctxt "province"
 msgid "Črnomelj"
-msgstr ""
+msgstr "Črnomelj"
 
 msgctxt "province"
 msgid "Destrnik"
@@ -11301,7 +11302,7 @@ msgstr "Destrnik"
 
 msgctxt "province"
 msgid "Divača"
-msgstr ""
+msgstr "Divača"
 
 msgctxt "province"
 msgid "Dobje"
@@ -11333,7 +11334,7 @@ msgstr "Dolenjske Toplice"
 
 msgctxt "province"
 msgid "Domžale"
-msgstr ""
+msgstr "Domžale"
 
 msgctxt "province"
 msgid "Dornava"
@@ -11353,7 +11354,7 @@ msgstr "Gorenja vas-Poljane"
 
 msgctxt "province"
 msgid "Gorišnica"
-msgstr ""
+msgstr "Gorišnica"
 
 msgctxt "province"
 msgid "Gornja Radgona"
@@ -11381,15 +11382,15 @@ msgstr "Hajdina"
 
 msgctxt "province"
 msgid "Hoče-Slivnica"
-msgstr ""
+msgstr "Hoče-Slivnica"
 
 msgctxt "province"
 msgid "Hodoš"
-msgstr ""
+msgstr "Hodoš"
 
 msgctxt "province"
 msgid "Horjul"
-msgstr ""
+msgstr "Horjul"
 
 msgctxt "province"
 msgid "Hrastnik"
@@ -11409,11 +11410,11 @@ msgstr "Ig"
 
 msgctxt "province"
 msgid "Ilirska Bistrica"
-msgstr ""
+msgstr "Ilirska Bistrica"
 
 msgctxt "province"
 msgid "Ivančna Gorica"
-msgstr ""
+msgstr "Ivančna Gorica"
 
 msgctxt "province"
 msgid "Izola"
