--- a/po/es_ES/extension.po
+++ b/po/es_ES/extension.po
@@ -6,14 +6,14 @@
 # Adrian Torralba Roman, 2016
 # ixiam <info@ixiam.com>, 2013
 # francescbassas <francesc@babu.cat>, 2015
-# ixiam <info@ixiam.com>, 2013
+# ixiam <info@ixiam.com>, 2013,2016
 # Irene Estefania <iestefania@ndi.org>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-16 12:11+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -160,11 +160,11 @@ msgstr "Una copia de la extensión (%1) está en la carpeta del sistema (%2). Un
 
 #: CRM/Extension/Manager.php
 msgid "Selected option value has been deleted."
-msgstr ""
+msgstr "El valor de la opción seleccionada ha sido eliminado."
 
 #: CRM/Extension/Browser.php
 msgid ""
 "The CiviCRM public extensions directory at %1 could not be contacted - "
 "please check your webserver can make external HTTP requests or contact "
 "CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
-msgstr ""
+msgstr "El directorio público de extensiones de CiviCRM en %1 no pudo ser contactado - por favor revise que su servidor web puede hacer peticiones HTTP externas o contacte con el equipo de CiviCRM en el <a href=\"http://forum.civicrm.org/\">foro de CiviCRM</a>."
