po: update po/es_ES/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/batch.po
+++ b/po/es_ES/batch.po
@@ -5,16 +5,16 @@
 # Translators:
 # ixiam <info@ixiam.com>, 2013
 # Fernando <badeaselche@hotmail.com>, 2012
-# ixiam <info@ixiam.com>, 2013
-# Marti <m.prat@ixiam.com>, 2015
+# ixiam <info@ixiam.com>, 2013,2016
+# Marti Prat <m.prat@ixiam.com>, 2015
 # Fernando <badeaselche@hotmail.com>, 2012
 # Veruska Perinotto <reaching.out@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-16 12:28+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,7 +40,7 @@ msgstr "Reabrir lote"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Delete Batch"
-msgstr ""
+msgstr "Eliminar lote"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -227,35 +227,35 @@ msgstr "No han sido creados lotes de ingreso de datos para este sitio.  "
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Method"
-msgstr ""
+msgstr "Forma de pago del lote"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch ID"
-msgstr ""
+msgstr "Identificador de la entidad del lote"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch Table"
-msgstr ""
+msgstr "Tabla de la entidad del lote"
 
 #: CRM/Batch/Form/Entry.php
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple records."
-msgstr ""
+msgstr "Campos de tipo archivo o de autocompletar no estan soportados en el perfil seleccionado para actualizar múltiples registros."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Click Validate & Process below when you've entered all items for the batch. "
 "You can also Save & Continue Later at any time."
-msgstr ""
+msgstr "Clicar en validar y procesar una vez introducidos todos los elementos en el lote. En cualquier momento, se puede guardar y continuar más tarde."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Add, remove or change the order of columns by editing the corresponding <a "
 "href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
-msgstr ""
+msgstr "Añadir, eliminar o cambiar el orden de las columnas mediante la edición de <a href=\"%1\" target=\"_blank\">perfil de entrada en lote</a>."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Custom fields and a Personal Campaign Page field can be added if needed."
-msgstr ""
+msgstr "Se pueden añadir campos personalizados y campos de páginas de campaña personal, si es necesario."
