--- a/po/es_ES/grant.po
+++ b/po/es_ES/grant.po
@@ -6,7 +6,7 @@
 # ixiam <info@ixiam.com>, 2013
 # Carlos Capote <carloscapote@masticable.org>, 2013
 # francescbassas <francesc@babu.cat>, 2015
-# ixiam <info@ixiam.com>, 2013
+# ixiam <info@ixiam.com>, 2013,2016
 # Irene Estefania <iestefania@ndi.org>, 2015
 # ixiam <info@ixiam.com>, 2013
 # jvalero <juan@jvalero.org>, 2011
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-16 11:42+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -322,8 +322,8 @@ msgstr "No se han registrado subvenciones para este contacto."
 
 #: CRM/Grant/Task.php
 msgid "Export grants"
-msgstr ""
+msgstr "Exportar subvenciones"
 
 #: CRM/Grant/Task.php
 msgid "Update grants"
-msgstr ""
+msgstr "Actualizar subvenciones"
