po: update po/es_ES/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/menu.po
+++ b/po/es_ES/menu.po
@@ -9,7 +9,7 @@
 # Fernando <badeaselche@hotmail.com>, 2012
 # francescbassas <francesc@babu.cat>, 2014-2015
 # francescbassas <francesc@babu.cat>, 2014
-# ixiam <info@ixiam.com>, 2013
+# ixiam <info@ixiam.com>, 2013,2016
 # iWi development <iwidevelopment@gmail.com>, 2011-2012
 # ixiam <info@ixiam.com>, 2013
 # jvalero <juan@jvalero.org>, 2011
@@ -17,7 +17,7 @@
 # kaotik <kaotiko@gmail.com>, 2011
 # kaotik <kaotiko@gmail.com>, 2011
 # Marcela Garcia-Casteblanco <marcegcol@hotmail.com>, 2015
-# Marti <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2014
 # Fernando <badeaselche@hotmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # piuser8 YT <piuser9@gmail.com>, 2016
@@ -26,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-16 15:47+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -899,7 +899,7 @@ msgstr "Blog de CiviCRM"
 
 msgctxt "menu"
 msgid "CiviCRM Getting Started"
-msgstr ""
+msgstr "CiviCRM Primeros pasos"
 
 msgctxt "menu"
 msgid "Case Dashlet"
@@ -1055,7 +1055,7 @@ msgstr "Eventos del Día y Próximos"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Event Participants List"
-msgstr "Listado de Participantes del Evento"
+msgstr "Listado de participantes en un evento"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1354,7 +1354,7 @@ msgstr "Noticias de CiviCRM"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "Primeros pasos"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1629,7 +1629,7 @@ msgstr "Opciones del Sistema"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Connections"
-msgstr ""
+msgstr "Conexiones"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1812,7 +1812,7 @@ msgctxt "menu"
 msgid ""
 "Provides detail list of employer employee relationships along with "
 "employment details."
-msgstr "Proporciona una lista detallada de las relaciones empleado empleador junto con los detalles del empleo."
+msgstr "Proporciona una lista detallada de las relaciones empleado-empleador junto con los detalles del empleo."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1842,12 +1842,12 @@ msgid ""
 "Lists specific contributions by criteria including contact, time period, "
 "contribution type, contributor location, etc. Contribution summary report "
 "points to this report for contribution details."
-msgstr "Lista de contribuciones específicas según el criterio, incluyendo contacto, período de tiempo, tipo de contribución, locación de la contribución, etc. El informe resumido de contribución señala a este informe para los detalles de contribución."
+msgstr "Lista de contribuciones específicas según el criterio, incluyendo contacto, período de tiempo, tipo de contribución, ubicación de la contribución, etc. El informe de resumen de contribución señala a este informe para los detalles de contribución."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Repeat Contributions"
-msgstr "Repetir contribuciones"
+msgstr "Contribuciones repetidas"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1873,7 +1873,7 @@ msgstr "Algún año(s) pero no éste. Provee una lista de contactos que donaron 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "LYBUNT (last year but not this year)"
-msgstr "LYBUNT (el año anterior, pero este año no)"
+msgstr "LYBUNT (el año anterior, pero no este año)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1893,7 +1893,7 @@ msgctxt "menu"
 msgid ""
 "Displays a detailed list of contributions grouped by organization, which "
 "includes contributions made by employees for the organisation."
-msgstr "Muestra una lista detallada de contribuciones agrupadas por organización, que incluye contribuciones hechas por empleados para la organización. "
+msgstr "Muestra una lista detallada de contribuciones agrupadas por organización, que incluye contribuciones hechas por empleados en nombre de la organización. "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1917,7 +1917,7 @@ msgctxt "menu"
 msgid ""
 "Provides a list of the top donors during a time period you define. You can "
 "include as many donors as you want (for example, top 100 of your donors)."
-msgstr "Provee una lista de donantes principales durante un período de tiempo que usted define. Puede incluir tantos donantes como desee (P ej. sus 100 principales donantes). "
+msgstr "Proporciona una lista de donantes principales durante un período de tiempo que usted defina. Puede incluir tantos donantes como desee (por ejemplo, sus 100 principales donantes). "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1934,19 +1934,19 @@ msgstr "Muestra contribuciones hechas por contactos que han pasado créditos bla
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contribution Aggregate by Relationship"
-msgstr "Contribución agregada por relación"
+msgstr "Acumulado de contribuciones por relación"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "List contact's donation history, grouped by year, along with contributions "
 "attributed to any of the contact's related contacts."
-msgstr "Lista la historia de donaciones de contactos, agrupada por año, junto a contribuciones atribuidas a los contactos relacionados con el contacto original.  "
+msgstr "Lista del histórico de donaciones de contactos, agrupada por año, junto a contribuciones atribuidas a los contactos relacionados con el contacto original."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Personal Campaign Page Summary"
-msgstr "Resumen de Página de Campañas Personales "
+msgstr "Resumen de páginas de campaña personal"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1987,12 +1987,12 @@ msgctxt "menu"
 msgid ""
 "Provides transaction details for all contributions and payments, including "
 "Transaction #, Invoice ID, Payment Instrument and Check #."
-msgstr "Provee detalles de transacciones para todas las contribuciones y pagos, incluyendo número de transacción, identificador de factura, instrumento de pago y número de cheque. "
+msgstr "Proporciona detalles de transacciones para todas las contribuciones y pagos, incluyendo número de transacción, identificador de factura, instrumento de pago y número de cheque. "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides information about the status of recurring contributions"
-msgstr "Ofrece información sobre el estado de las contribuciones recurrentes"
+msgstr "Proporciona información sobre el estado de las contribuciones recurrentes"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2007,7 +2007,7 @@ msgstr "Proporciona un resumen de miembros por tipo y fecha de inscripción."
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Membership Details"
-msgstr "Detalles de membresías"
+msgstr "Informe detallado de miembros"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2015,12 +2015,12 @@ msgid ""
 "Provides a list of members along with their membership status and membership"
 " details (Join Date, Start Date, End Date). Can also display contributions "
 "(payments) associated with each membership."
-msgstr "Provee una lista de miembros junto al estado de sus membresías y sus detalles (fecha de inscripción, comienzo y finalización). También puede mostrar contribuciones (pagos) asociadas con cada membresía."
+msgstr "Proporciona una lista de miembros junto al estado de sus membresías y sus detalles (fecha de inscripción, comienzo y finalización). También puede mostrar contribuciones (pagos) asociadas con cada membresía."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contribution and Membership Details"
-msgstr "Contribución y Membresía Detalles"
+msgstr "Informe detallado de contribuciones y membresías"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2028,7 +2028,7 @@ msgid ""
 "Contribution details for any type of contribution, plus associated "
 "membership information for contributions which are in payment for "
 "memberships."
-msgstr "Detalles para cada tipo de contribución, más información de membresía asociada con contribuciones que están en pago para membresías. "
+msgstr "Detalles de la contribución para cualquier tipo de contribución, además de información de la membresía asociada a las contribuciones que se encuentran en el pago de las membresías. "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2040,17 +2040,17 @@ msgctxt "menu"
 msgid ""
 "Provides a list of memberships that have lapsed or will lapse by the date "
 "you specify."
-msgstr "Provee una lista de membresías que han caducado o caducarán en la fecha que especifique."
+msgstr "Proporciona una lista de membresías que han caducado o caducarán en la fecha que especifique."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides lists of participants for an event."
-msgstr "Provee listas de participantes para un evento."
+msgstr "Proporciona listas de participantes para un evento."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Event Income Summary"
-msgstr "Resumen de ingresos de evento"
+msgstr "Resumen de ingresos de un evento"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2058,29 +2058,29 @@ msgid ""
 "Provides an overview of event income. You can include key information such "
 "as event ID, registration, attendance, and income generated to help you "
 "determine the success of an event."
-msgstr "Provee una vista general del ingreso de un evento. Puede incluir información clave como identificador de evento, registros, participación e ingreso generado para ayudarlo a determinar el éxito del evento. "
+msgstr "Proporciona una vista general de ingresos de un evento. Puede incluir información clave como el identificador del evento, registros, participación e ingresos generados para ayudar a determinar el éxito del evento. "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Event Income Details"
-msgstr "Detalles de ingreso de evento"
+msgstr "Detalles de ingresos de un evento"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "Helps you to analyze the income generated by an event. The report can "
 "include details by participant type, status and payment method."
-msgstr "Lo ayuda a analizar el ingreso generado por un evento. El reporte puede incluir detalles por tipo de participante, estado y método de pago."
+msgstr "Ayuda a analizar los ingresos generados por un evento. El informe puede incluir detalles por tipo de participante, estado y forma de pago."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Attendee List"
-msgstr "Lista de Asistentes"
+msgstr "Lista de asistentes"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides lists of event attendees."
-msgstr "Provee listas de participantes a un evento. "
+msgstr "Proporciona listas de participantes a un evento. "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2105,54 +2105,54 @@ msgstr "Estadísticas de reporte de donación"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mail Bounces"
-msgstr "Correo rechazado"
+msgstr "Rechazos de correo"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Bounce Report for mailings"
-msgstr "Resumen de rechazos de correos"
+msgstr "Resumen de rechazos en envíos de correo"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailing Summary"
-msgstr "Resumen de correo"
+msgstr "Resumen de envíos de correo"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Summary statistics for mailings"
-msgstr "Estadística de resúmenes de correos"
+msgstr "Resumen de estadísticas de envíos de correo"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mail Opened"
-msgstr "Correo abierto"
+msgstr "Aperturas de correo"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Display contacts who opened emails from a mailing"
-msgstr "Muestra contactos que abrieron correos electrónicos a partir de un correo"
+msgstr "Muestra los contactos que abrieron el mensaje procedente de un envío de correo"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mail Clickthroughs"
-msgstr "Clics de correo"
+msgstr "Clics de un correo"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Display clicks from each mailing"
-msgstr "Muestra clics para cada correo"
+msgstr "Muestra los clics para cada envío de correo"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailing Details"
-msgstr "Detalles de correo"
+msgstr "Detalles del envío de correo"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "Provides reporting on Intended and Successful Deliveries, Unsubscribes and "
 "Opt-outs, Replies and Forwards."
-msgstr "Provee reporte de envíos realizados, exitosos, bajas, respuestas y reenvíos. "
+msgstr "Proporciona informes sobre entregas previstas y exitosas, desuscripciones y bajas, respuestas y reenvíos. "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2168,66 +2168,66 @@ msgstr "Reporte detallado para prospección, llamadas bancarias, listas de esper
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr ""
+msgstr "Formas de pago"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "Configurar CKEditor"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "Unificar contactos duplicados en lote"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
-msgstr ""
+msgstr "Insertar contenido CiviCRM"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
-msgstr ""
+msgstr "Actualización del registro por cuenta propia"
 
 msgctxt "menu"
 msgid "Self-service Registration Transfer"
-msgstr ""
+msgstr "Transferencia del registro por cuenta propia"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Status"
-msgstr ""
+msgstr "Estado del sistema"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Components"
-msgstr ""
+msgstr "Componentes"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr ""
+msgstr "Extensiones"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "Detalles de actividad"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "Resumen de actividad"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "Muestra estadísticas de actividad por tipo / fecha"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "Detalle del compromiso"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Lista de compromisos incluyendo la cantidad comprometida, el estado del compromiso, la próxima fecha de pago, saldo actual, la cantidad total abonada, etc."
