po: update po/es_ES/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/provinces.po
+++ b/po/es_ES/provinces.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-20 12:49+0000\n"
+"PO-Revision-Date: 2016-06-16 11:37+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -15557,188 +15557,188 @@ msgstr "Shida Kartli"
 
 msgctxt "province"
 msgid "Harjumaa"
-msgstr ""
+msgstr "Condado de Harju"
 
 msgctxt "province"
 msgid "Hiiumaa"
-msgstr ""
+msgstr "Hiiumaa"
 
 msgctxt "province"
 msgid "Ida-Virumaa"
-msgstr ""
+msgstr "Condado de Ida-Viru"
 
 msgctxt "province"
 msgid "Jõgevamaa"
-msgstr ""
+msgstr "Condado de Jõgeva"
 
 msgctxt "province"
 msgid "Järvamaa"
-msgstr ""
+msgstr "Condado de Järva"
 
 msgctxt "province"
 msgid "Läänemaa"
-msgstr ""
+msgstr "Condado de Lääne"
 
 msgctxt "province"
 msgid "Lääne-Virumaa"
-msgstr ""
+msgstr "Condado de Lääne-Viru"
 
 msgctxt "province"
 msgid "Põlvamaa"
-msgstr ""
+msgstr "Condado de Põlva"
 
 msgctxt "province"
 msgid "Pärnumaa"
-msgstr ""
+msgstr "Condado de Pärnu"
 
 msgctxt "province"
 msgid "Raplamaa"
-msgstr ""
+msgstr "Condado de Rapla"
 
 msgctxt "province"
 msgid "Saaremaa"
-msgstr ""
+msgstr "Saaremaa"
 
 msgctxt "province"
 msgid "Tartumaa"
-msgstr ""
+msgstr "Condado de Tartu"
 
 msgctxt "province"
 msgid "Viljandimaa"
-msgstr ""
+msgstr "Condado de Tartu"
 
 msgctxt "province"
 msgid "Võrumaa"
-msgstr ""
+msgstr "Condado de Võru"
 
 msgctxt "province"
 msgid "Klaipėdos Apskritis"
-msgstr ""
+msgstr "Klaipėda"
 
 msgctxt "province"
 msgid "Marijampolės Apskritis"
-msgstr ""
+msgstr "Marijampolė"
 
 msgctxt "province"
 msgid "Panevėžio Apskritis"
-msgstr ""
+msgstr "Panevėžys"
 
 msgctxt "province"
 msgid "Šiaulių Apskritis"
-msgstr ""
+msgstr "Šiauliai"
 
 msgctxt "province"
 msgid "Tauragės Apskritis"
-msgstr ""
+msgstr "Tauragė"
 
 msgctxt "province"
 msgid "Telšių Apskritis"
-msgstr ""
+msgstr "Telšiai"
 
 msgctxt "province"
 msgid "Bataan"
-msgstr ""
+msgstr "Bataán"
 
 msgctxt "province"
 msgid "Al Bahah"
-msgstr ""
+msgstr "Al Bahah"
 
 msgctxt "province"
 msgid "Al Hudud Ash Shamaliyah"
-msgstr ""
+msgstr "Frontera del Norte"
 
 msgctxt "province"
 msgid "Blekinge län"
-msgstr ""
+msgstr "Blekinge"
 
 msgctxt "province"
 msgid "Dalarnas län"
-msgstr ""
+msgstr "Dalarna"
 
 msgctxt "province"
 msgid "Gotlands län"
-msgstr ""
+msgstr "Gotland"
 
 msgctxt "province"
 msgid "Gävleborgs län"
-msgstr ""
+msgstr "Gävleborg"
 
 msgctxt "province"
 msgid "Hallands län"
-msgstr ""
+msgstr "Halland"
 
 msgctxt "province"
 msgid "Jämtlands län"
-msgstr ""
+msgstr "Jämtland"
 
 msgctxt "province"
 msgid "Jönkopings län"
-msgstr ""
+msgstr "Jönköping"
 
 msgctxt "province"
 msgid "Kalmar län"
-msgstr ""
+msgstr "Kalmar"
 
 msgctxt "province"
 msgid "Kronobergs län"
-msgstr ""
+msgstr "Kronoberg"
 
 msgctxt "province"
 msgid "Norrbottens län"
-msgstr ""
+msgstr "Norrbotten"
 
 msgctxt "province"
 msgid "Skåne län"
-msgstr ""
+msgstr "Escania"
 
 msgctxt "province"
 msgid "Stockholms län"
-msgstr ""
+msgstr "Estocolmo"
 
 msgctxt "province"
 msgid "Södermanlands län"
-msgstr ""
+msgstr "Södermanland"
 
 msgctxt "province"
 msgid "Uppsala län"
-msgstr ""
+msgstr "Upsala"
 
 msgctxt "province"
 msgid "Värmlands län"
-msgstr ""
+msgstr "Värmland"
 
 msgctxt "province"
 msgid "Västerbottens län"
-msgstr ""
+msgstr "Västerbotten"
 
 msgctxt "province"
 msgid "Västernorrlands län"
-msgstr ""
+msgstr "Västernorrland"
 
 msgctxt "province"
 msgid "Västmanlands län"
-msgstr ""
+msgstr "Västmanland"
 
 msgctxt "province"
 msgid "Västra Götalands län"
-msgstr ""
+msgstr "Västra Götaland"
 
 msgctxt "province"
 msgid "Örebro län"
-msgstr ""
+msgstr "Örebro"
 
 msgctxt "province"
 msgid "Östergötlands län"
-msgstr ""
+msgstr "Östergötland"
 
 msgctxt "province"
 msgid "Phuket"
-msgstr ""
+msgstr "Phuket"
 
 msgctxt "province"
 msgid "Northern Ostrobothnia"
-msgstr ""
+msgstr "Ostrobotnia del Norte"
 
 msgctxt "province"
 msgid "Telangana"
-msgstr ""
+msgstr "Telangana"
